--- a/static/stat120/Day8.html
+++ b/static/stat120/Day8.html
@@ -52,7 +52,7 @@ background-size: 160px, 100% 100%
 
 ### .fancy[Stat 120]
 
- April 13 2022
+ January 20 2023
 
 ---
 
@@ -60,11 +60,11 @@ class: middle
 
 # Question!
 
-.blockquote[The higher the standard error of a statistic, the `\(\ldots \ldots\)` the uncertainty surrounding the statistic.
+.bq[
+The higher the standard error of a statistic, the `\(\ldots \ldots\)` the uncertainty surrounding the statistic.
 
-1. higher
-
-2. lower
+  1. higher
+  2. lower
 ]
 
 ---
@@ -74,8 +74,8 @@ class: middle
 
 
 &lt;center&gt;
-&lt;img src="images/samp.png" width="45%" height="30%"&gt;&lt;br&gt;
 &lt;a&gt;Sampling distributions. Top n=50, Bottom n=100&lt;/a&gt;
+&lt;img src="images/samp.png" width="50%" height="30%"&gt;&lt;br&gt;
 &lt;/center&gt;
 
 
@@ -85,7 +85,7 @@ class: middle
 
 # Interval Estimation
 
-.blockquote-list[
+.bql[
 - .bold[Point estimates] are almost always not accurate
 - Uncertainty in point estimates measured by the .bold[Standard Error (SE)]
 - A plausible range of values for the population parameter is more reliable
@@ -107,15 +107,14 @@ class: middle
 
 .pull-right[
 &lt;br&gt;
-&lt;br&gt;
 &gt; How accurate is an estimate of `\(60\%\)`?
 
 ]
 
+&lt;br&gt;
 
 &lt;center&gt;
-&lt;img src="images/surveymethods.png" width="60%" height="50%"&gt;&lt;br&gt;
-&lt;a&gt;Survey Methodology&lt;/a&gt;
+&lt;img src="images/surveymethods.png" width="70%" height="50%"&gt;&lt;br&gt;
 &lt;/center&gt;
 
 
@@ -138,7 +137,7 @@ class: middle
 
 .pull-right[
 
-.blockquote[
+.bq[
 - Interval estimate: `\(60\% \pm 3\% = (57\% , 63\%)\)`
 - The percentage of American adults who would vote for a Muslim for president is likely between `\(57\%\)` and `\(63\%\)`.
 - Would a majority of US adults vote for a qualified Muslim presidential candidate?
@@ -153,7 +152,7 @@ class: middle
 
 # Margin of Error
 
-.blockquote-list.font90[
+.bql.font90[
 - The .bold[margin of error] measures how accurate a point estimate is likely to be in estimating a parameter.
 
 - To determine the margin of error, we can use the statistic's .bold[sampling distribution] and .bold[standard error]
@@ -165,7 +164,7 @@ class: middle
 
 # Confidence Intervals
 
-.blockquote[
+.bq[
 - A .bold[confidence interval] is an interval containing the most believable values for a parameter
 - A confidence interval is centered on the .bold[point estimate] and extends a certain number of .bold[standard errors] on either side of the estimate
 - The .bold[confidence level] tells us what percent of the intervals will contain the population parameter.
@@ -193,12 +192,15 @@ class: middle
 
 ---
 
+class: middle
+
+
 # `\(95\%\)` Confidence Interval
 
 &gt; If the sampling distribution is relatively .bold[symmetric] and .bold[bell-shaped], a `\(95\%\)` confidence interval can be estimated using `$$\mathbf{statistic} \pm 2 \times \mathbf{SE}$$`
 
---
 
+&lt;br&gt;
 &lt;br&gt;
 
 &gt; `\(95\%\)` confidence means `\(95\%\)` of all samples will yield a statistic that is within 2 SE of the population parameter
@@ -209,9 +211,9 @@ class: middle
 
 # Confidence Intervals are ...
 
-.blockquote-list[
+.bql[
 - always about the .bold[population]
-- are not .bold[probability statements]
+- not .bold[probability statements]
 - only about .bold[population parameters], not individual observations
 - only reliable if the sample statistic they’re based on is an .bold[unbiased] estimator of the population parameter
 ]
@@ -220,10 +222,10 @@ class: middle
 
 # A short demo
 
-Click [here](http://www.lock5stat.com/StatKey/index.html) to go to Statkey website
+Let's all go to [Statkey](http://www.lock5stat.com/StatKey/index.html) web app.
 
 &lt;center&gt;
-&lt;img src="images/images.jpg" width="40%" height="30%"&gt;&lt;br&gt;
+&lt;img src="images/images.jpg" width="50%" height="30%"&gt;&lt;br&gt;
 &lt;/center&gt;
 
 ---
@@ -234,7 +236,7 @@ class: middle
 
 .pull-left[
 
-.blockquote-list[
+.bql[
 - The parameter is .bold[fixed]
 - The statistic is .bold[random] (depends on the sample)
 - The interval is also .bold[random] (depends on the statistic)
@@ -244,8 +246,7 @@ class: middle
 .pull-right[
 &lt;center&gt;
 &lt;img src="images/skconfidence.png" width="70%" height="80%"&gt;&lt;br&gt;
-&lt;a&gt;Repeated Sampling of 100 95% Confidence Intervals, Truth = Vertical Line&lt;/a&gt;
-&lt;/center&gt;
+&lt;a style="font-size: smaller;"&gt;Repeated Sampling of 100 95% Confidence Intervals, Truth = Vertical Line&lt;/a&gt;&lt;/center&gt;
 
 
 ]
@@ -254,11 +255,10 @@ class: middle
 
 class: middle
 
-# Bootstrap: Motivation
+# What to do when we only have one sample - .bold.green-h[BOOTSTRAP!]
 
-.blockquote[
+.bq[
 - .bold[Repeated sampling] is needed to compute the standard error of a sample statistic
-- What to do when we only have one sample - .bold.large[BOOTSTRAP!]
 - Can .bold[estimate the SE] from a bootstrap distribution
 - Use this SE to compute a .bold[confidence interval] for an unknown parameter
 ]
@@ -268,8 +268,8 @@ class: middle
 # Bootstrap 
 
 &lt;center&gt;
-&lt;img src="images/bootinf.png" width="60%" height="60%"&gt;&lt;br&gt;
 &lt;a&gt; Original sample (left) to population (right)&lt;/a&gt;
+&lt;img src="images/bootinf.png" width="60%" height="60%"&gt;&lt;br&gt;
 &lt;/center&gt;
 
 .out-t[Creating a bootstrap sample is the same as using the data simulate a “population” that contains an infinite number of copies of the data.]
@@ -279,7 +279,7 @@ class: middle
 
 # Bootstrap Sampling in R
 
-.blockquote-list[
+.bql[
 - resample a set of observations with replacement
 
 - same data points can appear multiple times
@@ -293,7 +293,7 @@ Original sample | `\(x_1, x_2, ..., x_n\)` | `\(\bar{x}_n\)`
 Resample  | `\(x_1^*, x_2^*, ..., x_n^*\)` | `\(\bar{x}^*_n\)`
 
 
-.pull-left[
+.pull-left-60[
 
 ```r
 # R-code
@@ -302,7 +302,7 @@ boot &lt;- sample(x, size, replace = TRUE)
 ```
 ]
 
-.pull-right[
+.pull-right-40[
 
 
 ```r
@@ -318,7 +318,7 @@ boot(x)
 
 # Bootstrap Steps
 
-.blockquote-list[
+.bql[
 1. Generate a bootstrap sample.
 
 2. Compute the statistic of interest for your bootstrap sample.
@@ -327,9 +327,11 @@ boot(x)
 
 ]
 
+--
+
 &lt;br&gt;
 
-.out-t[This is the bootstrap distribution!]
+.out-t.center.Large[This is the bootstrap distribution!!]
 
 
 ---
@@ -338,7 +340,7 @@ class: middle
 
 # Bootstrap Distribution
 
-.blockquote-list[
+.bql[
 - A .bold[bootstrap distribution] is the distribution of many bootstrap statistics.
 
 - The standard deviation of this distribution is called the .bold[bootstrap standard error] of the statistic.
@@ -356,7 +358,7 @@ class: middle
 
 &lt;br&gt;
 
-.blockquote[
+.bq[
 Suppose `\(X = \{20, 24, 19, 23, 22, 16\}\)`
 `\begin{align*}
             X_1^* &amp;= \{16, 19, 16 ,23 ,22, 24\}\\
@@ -381,7 +383,7 @@ N = total number of simulations/samples
 
 ## Summary
 
-.blockquote-list[
+.bql.font90[
 - .bold[Interval estimates] let us infer a set of plausible values for a parameter
 - A 95% .bold[confidence interval] will contain the true parameter for 95% of all samples
 - Usually, we do not have access to the population and cannot do .bold[repeated sampling]
@@ -399,20 +401,19 @@ class: action
 ![](https://media.giphy.com/media/RKApDdwsQ6jkwd6RNn/giphy.gif)
 ]
 .pull-right-60[
-
 &lt;br&gt;
 &lt;br&gt;
-.blockquote[
-
 &lt;br&gt;
+.bq[
 
 Go over the remaining portion of in class activity and let me know if you have any questions!
 
 ]
 ]
 
-<div class="countdown" id="timer_6256685d" style="top:0;right:0;padding:3px 4px;font-size:2em;" data-warnwhen="0">
-<code class="countdown-time"><span class="countdown-digits minutes">05</span><span class="countdown-digits colon">:</span><span class="countdown-digits seconds">00</span></code>
+<div class="countdown" id="timer_3d0815e0" data-update-every="1" tabindex="0" style="top:0;right:0;padding:3px 4px;font-size:2em;">
+<div class="countdown-controls"><button class="countdown-bump-down">&minus;</button><button class="countdown-bump-up">&plus;</button></div>
+<code class="countdown-time"><span class="countdown-digits minutes">25</span><span class="countdown-digits colon">:</span><span class="countdown-digits seconds">00</span></code>
 </div>
 
 
@@ -466,6 +467,19 @@ if (window.HTMLWidgets) slideshow.on('afterShowSlide', function (slide) {
     deleted = true;
   });
 })();
+// add `data-at-shortcutkeys` attribute to <body> to resolve conflicts with JAWS
+// screen reader (see PR #262)
+(function(d) {
+  let res = {};
+  d.querySelectorAll('.remark-help-content table tr').forEach(tr => {
+    const t = tr.querySelector('td:nth-child(2)').innerText;
+    tr.querySelectorAll('td:first-child .key').forEach(key => {
+      const k = key.innerText;
+      if (/^[a-z]$/.test(k)) res[k] = t;  // must be a single letter (key)
+    });
+  });
+  d.body.setAttribute('data-at-shortcutkeys', JSON.stringify(res));
+})(document);
 (function() {
   "use strict"
   // Replace <script> tags in slides area to make them executable
