--- a/static/stat120/Day9.html
+++ b/static/stat120/Day9.html
@@ -53,7 +53,7 @@ background-size: 160px, 100% 100%
 
 ### .fancy[Stat 120]
 
- April 15 2022
+ January 23 2023
 
 
 ---
@@ -62,7 +62,7 @@ class: middle
 
 ## Confidence Interval Recap
 
-.blockquote-list[A .bold[confidence interval] for a parameter is an interval computed from sample data by a method that will capture the parameter for a specified proportion of all samples.
+.bql[A .bold[confidence interval] for a parameter is an interval computed from sample data by a method that will capture the parameter for a specified proportion of all samples.
 
 `$$CI = PE \pm ME$$`
 .bold[95 % CI] $$ statistic \pm 2\times SE $$
@@ -78,7 +78,7 @@ class: middle
 
 .pull-left[
 &lt;br&gt;
-.blockquote[
+.bq.font90[
 - The success rate (proportion of all samples whose intervals contain the parameter) is known as the .bold[confidence level]
 
 - A 95% confidence interval will contain the true .bold[parameter] for 95% of all samples
@@ -88,7 +88,7 @@ class: middle
 .pull-right[
 &lt;center&gt;
 &lt;img src="images/skconfidence.png" width="70%" height="80%"&gt;&lt;br&gt;
-&lt;a&gt;Repeated Sampling of 100 95% Confidence Intervals, Truth = Vertical Line&lt;/a&gt;
+&lt;a style="font-size: smaller;"&gt;Repeated Sampling of 100 95% Confidence Intervals, Truth = Vertical Line&lt;/a&gt;
 &lt;/center&gt;
 ]
 
@@ -100,7 +100,7 @@ class: middle
 
 A survey of .bold[1,502] Americans in January 2012 found that .bold[86%] consider the economy a “top priority” for the president and congress. The standard error for this statistic is .bold[0.01]. 
 
-.blockquote-list[
+.bql[
 
 What is the .bold[95% confidence interval] for the true proportion of all Americans that considered the economy a “top priority” at that time?
 
@@ -127,7 +127,7 @@ class: middle
 
 # Confidence Interval Interpretation
 
-.blockquote-list[
+.bql[
 
 Which of the following is an appropriate .bold[interpretation] for a 95% confidence interval:
 
@@ -153,16 +153,14 @@ The correct answer is A.
 
 # Common Misintepretations
 
-.blockquote-list[
+.bql[
 - .bold[Misinterpretation 1:] “A 95% confidence interval contains 95% of the data in the population"
 - .bold[Misinterpretation 2:] “I am 95% sure that the mean of a sample will fall within a 95% confidence interval for the mean”
 - .bold[Misinterpretation 3:] “The probability that the population parameter is in this particular 95% confidence interval is 0.95”
-
 ]
 
 --
 
-&lt;br&gt;
 
 .yellow-h.font120[I am 95% sure that the mean of a population will fall within a 95% confidence interval for the mean]
 
@@ -172,7 +170,7 @@ class: middle
 
 # Example 2
 
-.blockquote[
+.bq[
 A 98% confidence interval for mean pulse rate is 65 to 71.  The interpretation “I am 98% sure that all students will have pulse rates between 65 and 71.” is
 
 A. Correct
@@ -193,7 +191,7 @@ class: middle
 
 # Example 3
 
-.blockquote[
+.bq[
 A 98% confidence interval for mean pulse rate is 65 to 71.  The interpretation “I am 98% sure that the mean pulse rate for this sample of students will fall between 65 and 71” is
 
 
@@ -215,7 +213,7 @@ class: middle
 
 # Example 4
 
-.blockquote[
+.bq[
 A 98% confidence interval for mean pulse rate is 65 to 71.  The interpretation “I am 98% sure that the mean pulse rate for the population of all students will fall between 65 and 71” is
 
 
@@ -237,7 +235,7 @@ class: middle
 
 # Level of Confidence
 
-.blockquote[Which is wider? a 99% confidence interval or a 95% confidence interval?
+.bq[Which is wider? a 99% confidence interval or a 95% confidence interval?
 
 (a) 95% CI
 
@@ -253,23 +251,21 @@ The correct answer is (b). We need a larger interval (range of likely parameter 
 
 ---
 
-# Review
-
-&lt;center&gt;
-&lt;img src="images/cireview.png" width="60%" height="60%"&gt;&lt;br&gt;
-&lt;a&gt;A nice infographic review&lt;/a&gt;
-&lt;/center&gt;
+background-image: url("images/cireview.png") 
+background-position: cover
+background-size: 800px, 100% 100%
 
 ---
+
 
 # Sampling Distribution Vs Bootstrap Distribution
 
 .pull-left[
 
-.blockquote[
+.bq[
 .bold[Sampling Distribution of a statistic]
 
-- Take .red[many samples] from the population, compute the statistic for each sample
+- Take .green[many samples] from the population, compute the statistic for each sample
 - .bold[Shape:] bell-shaped when n is large
 - .bold[Center:] population parameter
 - .bold[Spread:] called the SE of the statistic
@@ -279,11 +275,11 @@ The correct answer is (b). We need a larger interval (range of likely parameter 
 ]
 
 .pull-right[
-.blockquote[
+.bq[
 
 .bold[Bootstrap Distribution of a statistic]
 
-- Take .red[many bootstrap samples] from the original sample, compute the statistic for each bootstrap sample
+- Take .green[many bootstrap samples] from the original sample, compute the statistic for each bootstrap sample
 - .bold[Shape:] bell-shaped when n is large
 - .bold[Center:] original sample statistic!
 - .bold[Spread:] caled the bootstrap SE of the statistic
@@ -301,7 +297,7 @@ The correct answer is (b). We need a larger interval (range of likely parameter 
 
 # Percentile Method Bootstrap
 
-.blockquote.font90[If the bootstrap distribution is approximately symmetric, a P% confidence interval equals the percentiles in the bootstrap distribution so that the proportion of bootstrap statistics between the percentiles equal P%.]
+.bq.font90[If the bootstrap distribution is approximately symmetric, a P% confidence interval equals the percentiles in the bootstrap distribution so that the proportion of bootstrap statistics between the percentiles equal P%.]
 
 &lt;center&gt;
 &lt;img src="images/bootpercentile.png" width="60%" height="60%"&gt;&lt;br&gt;
@@ -314,7 +310,7 @@ class: middle
 
 # The Magic of Bootstrapping
 
-.blockquote.font90[
+.bq.font90[
 - We can use bootstrapping to approximate the SE for .bold[many types] of sample statistic!
     - Mean, proportion, differences, correlation, slope
     - Standard deviation, *median*
@@ -348,7 +344,7 @@ For Florida lakes, what is the correlation between average mercury level (ppm) i
 &lt;a&gt;A lake in Florida&lt;/a&gt;
 &lt;/center&gt;
 
-.blockquote[
+.bq[
 `\(r = -0.575\)`
 
 Give a 90% CI for `\(\rho\)`?
@@ -376,7 +372,7 @@ class: middle
 
 # Bootstrap Caution!
 
-.blockquote[
+.bq[
 - These methods for creating a confidence interval only work if the bootstrap distribution is smooth and symmetric
 
 - .bold[ALWAYS] look at a plot of the bootstrap distribution!
@@ -398,7 +394,7 @@ class: action
 
 &lt;br&gt;
 &lt;br&gt;
-.blockquote[
+.bq[
 
 &lt;br&gt;
 
@@ -407,8 +403,9 @@ Skim through the remaining portion of in class activity and we will discuss this
 ]
 ]
 
-<div class="countdown" id="timer_625979d0" style="top:0;right:0;padding:3px 4px;font-size:2em;" data-warnwhen="0">
-<code class="countdown-time"><span class="countdown-digits minutes">05</span><span class="countdown-digits colon">:</span><span class="countdown-digits seconds">00</span></code>
+<div class="countdown" id="timer_667d574b" data-update-every="1" tabindex="0" style="top:0;right:0;padding:3px 4px;font-size:2em;">
+<div class="countdown-controls"><button class="countdown-bump-down">&minus;</button><button class="countdown-bump-up">&plus;</button></div>
+<code class="countdown-time"><span class="countdown-digits minutes">15</span><span class="countdown-digits colon">:</span><span class="countdown-digits seconds">00</span></code>
 </div>
 
 
@@ -462,6 +459,19 @@ if (window.HTMLWidgets) slideshow.on('afterShowSlide', function (slide) {
     deleted = true;
   });
 })();
+// add `data-at-shortcutkeys` attribute to <body> to resolve conflicts with JAWS
+// screen reader (see PR #262)
+(function(d) {
+  let res = {};
+  d.querySelectorAll('.remark-help-content table tr').forEach(tr => {
+    const t = tr.querySelector('td:nth-child(2)').innerText;
+    tr.querySelectorAll('td:first-child .key').forEach(key => {
+      const k = key.innerText;
+      if (/^[a-z]$/.test(k)) res[k] = t;  // must be a single letter (key)
+    });
+  });
+  d.body.setAttribute('data-at-shortcutkeys', JSON.stringify(res));
+})(document);
 (function() {
   "use strict"
   // Replace <script> tags in slides area to make them executable
